--- a/src/entrypoints/popup/App.css
+++ b/src/entrypoints/popup/App.css
@@ -46,6 +46,19 @@
   font-size: 0.9rem;
 }
 
+a.btn {
+  text-decoration: none;
+  display: inline-block;
+}
+
+.btn.btn--feedback {
+  font-weight: 400; 
+}
+
+.feedback-row {
+  margin-top: 7px;
+}
+
 .btn.secondary {
   background: #ffffff;
 }
